--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "quiz",
-  "homepage": "https://BelugaGo.github.io/BelugaQuiz",
+  "homepage": "https://belugago.github.io/BelugaQuiz",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
